--- a/_data/course.yml
+++ b/_data/course.yml
@@ -1,3 +1,28 @@
 title: "ECS 154B/201A: Computer Architecture"
 description: "UC Davis Computer Architecture course offered by Jason Lowe-Power Winter Quarter 2022"
 modules: ["Introduction", "Processor Architecture", "Memory Architecture", "Parallel Architecture", "DINO CPU", "gem5"]
+
+quarter: "Winter 2023"
+
+lecture_location: "Giedt 1003. M/W/F 8:00am - 8:50am"
+
+aggie_video_link: "https://video.ucdavis.edu/playlist/details/1_ic2ph2v4"
+one_note_link: "https://ucdavis365-my.sharepoint.com/:o:/g/personal/jlowepower_ucdavis_edu/EtlRRM0EoZVCuIynJaHyEjYB0oWkvjqd6MLN8GqqAHa1Ag?e=ukMS14"
+discussion_link: "https://piazza.com/class/lcf5v5re7q51ky/"
+dino_cpu_link: "https://github.com/jlpteaching/dinocpu-wq23"
+gradescope_154b: "https://www.gradescope.com/"
+gradescope_201a: "https://www.gradescope.com/"
+
+trello_code: "gOoaNrJq"
+trello_name: "ecs-154b-201a-wq23"
+
+dates:
+  midterm: "2/8"
+  final:   "3/21"
+
+  dino_1:  "1/20"
+  dino_2:  "1/27"
+  dino_31: "2/6"
+  dino_32: "2/17"
+  dino_4:  "3/3"
+  dino_5:  "3/17"
