Add perusall link

--- a/_data/course.yml
+++ b/_data/course.yml
@@ -12,6 +12,7 @@ discussion_link: "https://piazza.com/class/lcf5v5re7q51ky/"
 dino_cpu_link: "https://github.com/jlpteaching/dinocpu-wq23"
 gradescope_154b: "https://www.gradescope.com/"
 gradescope_201a: "https://www.gradescope.com/"
+perusall_link: "https://app.perusall.com/courses/ecs-201a-001-wq-2023/"
 
 trello_code: "gOoaNrJq"
 trello_name: "ecs-154b-201a-wq23"
