--- a/_data/course.yml
+++ b/_data/course.yml
@@ -3,8 +3,9 @@ description: "UC Davis Computer Architecture course offered by Jason Lowe-Power 
 modules: ["Introduction", "Processor Architecture", "Memory Architecture", "Parallel Architecture", "DINO CPU", "gem5"]
 
 quarter: "Winter 2023"
-
+quarter_abbr: "wq23"
 lecture_location: "Giedt 1003. M/W/F 8:00am - 8:50am"
+discussion_site: "Piazza"
 
 aggie_video_link: "https://video.ucdavis.edu/playlist/details/1_ic2ph2v4"
 one_note_link: "https://ucdavis365-my.sharepoint.com/:o:/g/personal/jlowepower_ucdavis_edu/EtlRRM0EoZVCuIynJaHyEjYB0oWkvjqd6MLN8GqqAHa1Ag?e=ukMS14"
@@ -13,6 +14,9 @@ dino_cpu_link: "https://github.com/jlpteaching/dinocpu-wq23"
 gradescope_154b: "https://www.gradescope.com/"
 gradescope_201a: "https://www.gradescope.com/"
 perusall_link: "https://app.perusall.com/courses/ecs-201a-001-wq-2023/"
+
+dinocpu_gradescope_lab1_code_link: "https://www.gradescope.com/"
+dinocpu_gradescope_lab1_diagram_link: "https://www.gradescope.com/"
 
 trello_code: "gOoaNrJq"
 trello_name: "ecs-154b-201a-wq23"
