--- a/_data/course.yml
+++ b/_data/course.yml
@@ -17,6 +17,7 @@ perusall_link: "https://app.perusall.com/courses/ecs-201a-001-wq-2023/"
 
 dinocpu_gradescope_lab1_code_link: "https://www.gradescope.com/"
 dinocpu_gradescope_lab1_diagram_link: "https://www.gradescope.com/"
+dinocpu_gradescope_lab2_code_link: "https://www.gradescope.com/"
 
 trello_code: "gOoaNrJq"
 trello_name: "ecs-154b-201a-wq23"
