--- a/_data/course.yml
+++ b/_data/course.yml
@@ -8,7 +8,7 @@ lecture_location: "Giedt 1003. M/W/F 8:00am - 8:50am"
 discussion_site: "Piazza"
 
 aggie_video_link: "https://video.ucdavis.edu/playlist/details/1_ic2ph2v4"
-one_note_link: "https://ucdavis365-my.sharepoint.com/:o:/g/personal/jlowepower_ucdavis_edu/EtlRRM0EoZVCuIynJaHyEjYB0oWkvjqd6MLN8GqqAHa1Ag?e=ukMS14"
+one_note_link: "https://ucdavis365-my.sharepoint.com/:o:/g/personal/jlowepower_ucdavis_edu/EqCTAjPGIZJFsUOljeOn_IIBwTBmdVNr-AmORcK8rCqOLQ?e=9Up2jF"
 discussion_link: "https://piazza.com/class/lcf5v5re7q51ky/"
 dino_cpu_link: "https://github.com/jlpteaching/dinocpu-wq23"
 gradescope_154b: "https://www.gradescope.com/"
