--- a/_data/course.yml
+++ b/_data/course.yml
@@ -11,7 +11,7 @@ aggie_video_link: "https://video.ucdavis.edu/playlist/details/1_ic2ph2v4"
 one_note_link: "https://ucdavis365-my.sharepoint.com/:o:/g/personal/jlowepower_ucdavis_edu/EqCTAjPGIZJFsUOljeOn_IIBwTBmdVNr-AmORcK8rCqOLQ?e=9Up2jF"
 discussion_link: "https://piazza.com/class/lcf5v5re7q51ky/"
 dino_cpu_link: "https://github.com/jlpteaching/dinocpu-wq23"
-gradescope_154b: "https://www.gradescope.com/"
+gradescope_154b: "https://www.gradescope.com/courses/486165"
 gradescope_201a: "https://www.gradescope.com/"
 perusall_link: "https://app.perusall.com/courses/ecs-201a-001-wq-2023/"
 
