--- a/_data/course.yml
+++ b/_data/course.yml
@@ -10,10 +10,18 @@ discussion_site: "Piazza"
 aggie_video_link: "https://video.ucdavis.edu/playlist/details/1_ic2ph2v4"
 one_note_link: "https://ucdavis365-my.sharepoint.com/:o:/g/personal/jlowepower_ucdavis_edu/EqCTAjPGIZJFsUOljeOn_IIBwTBmdVNr-AmORcK8rCqOLQ?e=9Up2jF"
 discussion_link: "https://piazza.com/class/lcf5v5re7q51ky/"
-dino_cpu_link: "https://github.com/jlpteaching/dinocpu-wq23"
+dino_cpu_link: "https://github.com/ECS154B-WQ23/dinocpu-assignment1"
 gradescope_154b: "https://www.gradescope.com/courses/486165"
 gradescope_201a: "https://www.gradescope.com/"
 perusall_link: "https://app.perusall.com/courses/ecs-201a-001-wq-2023/"
+
+154b_github_classroom_link: "https://github.com/ECS154B-WQ23"
+154b_assignment1_github_link: "https://github.com/ECS154B-WQ23/dinocpu-assignment1"
+154b_assignment2_github_link: "https://github.com/ECS154B-WQ23/"
+154b_assignment3_github_link: "https://github.com/ECS154B-WQ23/"
+154b_assignment4_github_link: "https://github.com/ECS154B-WQ23/"
+
+154b_assignment1_invitation_link: "https://classroom.github.com/a/q9Ol1Upy"
 
 154b_gradescope_lab1_code_link: "https://www.gradescope.com/"
 154b_gradescope_lab1_diagram_link: "https://www.gradescope.com/"
