Add gradescope links for assignment1
Signed-off-by: Hoa Nguyen <hoanguyen@ucdavis.edu>

--- a/_data/course.yml
+++ b/_data/course.yml
@@ -23,8 +23,8 @@ perusall_link: "https://app.perusall.com/courses/ecs-201a-001-wq-2023/"
 
 154b_assignment1_invitation_link: "https://classroom.github.com/a/q9Ol1Upy"
 
-154b_gradescope_lab1_code_link: "https://www.gradescope.com/"
-154b_gradescope_lab1_diagram_link: "https://www.gradescope.com/"
+154b_gradescope_lab1_code_link: "https://www.gradescope.com/courses/486165/assignments/2551984"
+154b_gradescope_lab1_diagram_link: "https://www.gradescope.com/courses/486165/assignments/2552251"
 154b_gradescope_lab2_code_link: "https://www.gradescope.com/"
 154b_gradescope_lab31_code_link: "https://www.gradescope.com/"
 154b_gradescope_lab32_code_link: "https://www.gradescope.com/"
