Make assignment 2 ready
Signed-off-by: Hoa Nguyen <hoanguyen@ucdavis.edu>

--- a/_data/course.yml
+++ b/_data/course.yml
@@ -17,15 +17,16 @@ perusall_link: "https://app.perusall.com/courses/ecs-201a-001-wq-2023/"
 
 154b_github_classroom_link: "https://github.com/ECS154B-WQ23"
 154b_assignment1_github_link: "https://github.com/ECS154B-WQ23/dinocpu-assignment1"
-154b_assignment2_github_link: "https://github.com/ECS154B-WQ23/"
+154b_assignment2_github_link: "https://github.com/ECS154B-WQ23/dinocpu-assignment2"
 154b_assignment3_github_link: "https://github.com/ECS154B-WQ23/"
 154b_assignment4_github_link: "https://github.com/ECS154B-WQ23/"
 
 154b_assignment1_invitation_link: "https://classroom.github.com/a/q9Ol1Upy"
+154b_assignment2_invitation_link: "https://classroom.github.com/a/cy_YoD11"
 
 154b_gradescope_lab1_code_link: "https://www.gradescope.com/courses/486165/assignments/2551984"
 154b_gradescope_lab1_diagram_link: "https://www.gradescope.com/courses/486165/assignments/2552251"
-154b_gradescope_lab2_code_link: "https://www.gradescope.com/"
+154b_gradescope_lab2_code_link: "https://www.gradescope.com/courses/486165/assignments/2552474/"
 154b_gradescope_lab31_code_link: "https://www.gradescope.com/"
 154b_gradescope_lab32_code_link: "https://www.gradescope.com/"
 
