Add 154B assignment4 metadata

--- a/_data/course.yml
+++ b/_data/course.yml
@@ -19,17 +19,20 @@ dino_cpu_link: "https://github.com/jlpteaching/dinocpu"
 154b_assignment1_github_link: "https://github.com/ECS154B-WQ23/dinocpu-assignment1"
 154b_assignment2_github_link: "https://github.com/ECS154B-WQ23/dinocpu-assignment2"
 154b_assignment3_github_link: "https://github.com/ECS154B-WQ23/dinocpu-assignment3"
-154b_assignment4_github_link: "https://github.com/ECS154B-WQ23/"
+154b_assignment4_github_link: "https://github.com/ECS154B-WQ23/dinocpu-assignment4"
 
 154b_assignment1_invitation_link: "https://classroom.github.com/a/q9Ol1Upy"
 154b_assignment2_invitation_link: "https://classroom.github.com/a/cy_YoD11"
 154b_assignment3_invitation_link: "https://classroom.github.com/a/rQp6fbZ-"
+154b_assignment4_invitation_link: "https://classroom.github.com/a/Wh6Wdqd_"
 
 154b_gradescope_lab1_code_link: "https://www.gradescope.com/courses/486165/assignments/2551984"
 154b_gradescope_lab1_diagram_link: "https://www.gradescope.com/courses/486165/assignments/2552251"
 154b_gradescope_lab2_code_link: "https://www.gradescope.com/courses/486165/assignments/2552474/"
 154b_gradescope_lab31_code_link: "https://www.gradescope.com/courses/486165/assignments/2558895"
 154b_gradescope_lab32_code_link: "https://www.gradescope.com/courses/486165/assignments/2558902"
+154b_gradescope_lab4_code_link: "https://www.gradescope.com/courses/486165/assignments/2676696"
+154b_gradescope_lab4_written_link: "https://www.gradescope.com/courses/486165/assignments/2676711"
 
 trello_code: "gOoaNrJq"
 trello_name: "ecs-154b-201a-wq23"
