--- a/_data/course.yml
+++ b/_data/course.yml
@@ -33,6 +33,8 @@ dino_cpu_link: "https://github.com/jlpteaching/dinocpu"
 154b_gradescope_lab32_code_link: "https://www.gradescope.com/courses/486165/assignments/2558902"
 154b_gradescope_lab4_code_link: "https://www.gradescope.com/courses/486165/assignments/2676696"
 154b_gradescope_lab4_written_link: "https://www.gradescope.com/courses/486165/assignments/2676711"
+154b_gradescope_lab5_code_link: "https://www.gradescope.com/courses/486165/assignments/2720922"
+154b_gradescope_lab5_written_link: "https://www.gradescope.com/courses/486165/assignments/2720901"
 
 trello_code: "gOoaNrJq"
 trello_name: "ecs-154b-201a-wq23"
