Add some links for wq24
Signed-off-by: Jason Lowe-Power <jason@lowepower.com>

--- a/_data/course.yml
+++ b/_data/course.yml
@@ -2,42 +2,42 @@ title: "ECS 154B/201A: Computer Architecture"
 description: "UC Davis Computer Architecture course offered by Jason Lowe-Power Winter Quarter 2023"
 modules: ["Introduction", "Processor Architecture", "Memory Architecture", "Parallel Architecture", "DINO CPU", "gem5"]
 
-quarter: "Winter 2023"
-quarter_abbr: "wq23"
-lecture_location: "Giedt 1003. M/W/F 8:00am - 8:50am"
+quarter: "Winter 2024"
+quarter_abbr: "wq24"
+lecture_location: "Storer Hall 1322. M/W/F 2:10pm - 3:00pm"
 discussion_site: "Piazza"
 
 aggie_video_link: "https://video.ucdavis.edu/playlist/details/1_ic2ph2v4"
-one_note_link: "https://ucdavis365-my.sharepoint.com/:o:/g/personal/jlowepower_ucdavis_edu/EqCTAjPGIZJFsUOljeOn_IIBwTBmdVNr-AmORcK8rCqOLQ?e=9Up2jF"
-discussion_link: "https://piazza.com/class/lcf5v5re7q51ky/"
+one_note_link: "https://ucdavis365-my.sharepoint.com/:o:/g/personal/jlowepower_ucdavis_edu/EtZIYVzF421CvaoUEqJIK5EBVYSpbfNg-WehTi88LEEl5A?e=DyKhWo"
+discussion_link: "https://piazza.com/class/lq5t2onsrnb1ux"
 gradescope_154b: "https://www.gradescope.com/courses/486165"
 gradescope_201a: "https://www.gradescope.com/"
-perusall_link: "https://app.perusall.com/courses/ecs-201a-001-wq-2023/"
+perusall_link: "https://app.perusall.com/courses/ecs-201a-001-wq-2024/"
 
-154b_github_classroom_link: "https://github.com/ECS154B-WQ23"
+154b_github_classroom_link: "https://github.com/ECS154B-WQ24"
 dino_cpu_link: "https://github.com/jlpteaching/dinocpu"
-154b_assignment1_github_link: "https://github.com/ECS154B-WQ23/dinocpu-assignment1"
-154b_assignment2_github_link: "https://github.com/ECS154B-WQ23/dinocpu-assignment2"
-154b_assignment3_github_link: "https://github.com/ECS154B-WQ23/dinocpu-assignment3"
-154b_assignment4_github_link: "https://github.com/ECS154B-WQ23/dinocpu-assignment4"
+154b_assignment1_github_link: "https://github.com/ECS154B-WQ24/dinocpu-assignment1"
+154b_assignment2_github_link: "https://github.com/ECS154B-WQ24/dinocpu-assignment2"
+154b_assignment3_github_link: "https://github.com/ECS154B-WQ24/dinocpu-assignment3"
+154b_assignment4_github_link: "https://github.com/ECS154B-WQ24/dinocpu-assignment4"
 
-154b_assignment1_invitation_link: "https://classroom.github.com/a/q9Ol1Upy"
-154b_assignment2_invitation_link: "https://classroom.github.com/a/cy_YoD11"
-154b_assignment3_invitation_link: "https://classroom.github.com/a/rQp6fbZ-"
-154b_assignment4_invitation_link: "https://classroom.github.com/a/Wh6Wdqd_"
+154b_assignment1_invitation_link: ""
+154b_assignment2_invitation_link: ""
+154b_assignment3_invitation_link: ""
+154b_assignment4_invitation_link: ""
 
-154b_gradescope_lab1_code_link: "https://www.gradescope.com/courses/486165/assignments/2551984"
-154b_gradescope_lab1_diagram_link: "https://www.gradescope.com/courses/486165/assignments/2552251"
-154b_gradescope_lab2_code_link: "https://www.gradescope.com/courses/486165/assignments/2552474/"
-154b_gradescope_lab31_code_link: "https://www.gradescope.com/courses/486165/assignments/2558895"
-154b_gradescope_lab32_code_link: "https://www.gradescope.com/courses/486165/assignments/2558902"
-154b_gradescope_lab4_code_link: "https://www.gradescope.com/courses/486165/assignments/2676696"
-154b_gradescope_lab4_written_link: "https://www.gradescope.com/courses/486165/assignments/2676711"
-154b_gradescope_lab5_code_link: "https://www.gradescope.com/courses/486165/assignments/2720922"
-154b_gradescope_lab5_written_link: "https://www.gradescope.com/courses/486165/assignments/2720901"
+154b_gradescope_lab1_code_link: ""
+154b_gradescope_lab1_diagram_link: ""
+154b_gradescope_lab2_code_link: ""
+154b_gradescope_lab31_code_link: ""
+154b_gradescope_lab32_code_link: ""
+154b_gradescope_lab4_code_link: ""
+154b_gradescope_lab4_written_link: ""
+154b_gradescope_lab5_code_link: ""
+154b_gradescope_lab5_written_link: ""
 
 trello_code: "gOoaNrJq"
-trello_name: "ecs-154b-201a-wq23"
+trello_name: "ecs-154b-201a-wq24"
 
 dates:
   midterm: "2/8"
