Updates to gem5 assignment 0 and add templates for links in gem5 assignments

--- a/_data/course.yml
+++ b/_data/course.yml
@@ -36,23 +36,37 @@ dino_cpu_link: "https://github.com/jlpteaching/dinocpu"
 154b_gradescope_lab5_code_link: ""
 154b_gradescope_lab5_written_link: ""
 
-trello_code: "gOoaNrJq"
+201a_github_classroom_link: "https://github.com/ECS201A-WQ24"
+201a_assignment0_github_link: "https://github.com/ECS201A-WQ24/assignment1"
+201a_assignment1_github_link: "https://github.com/ECS201A-WQ24/assignment2"
+201a_assignment2_github_link: "https://github.com/ECS201A-WQ24/assignment3"
+201a_assignment3_github_link: "https://github.com/ECS201A-WQ24/assignment4"
+201a_assignment4_github_link: "https://github.com/ECS201A-WQ24/assignment5"
+
+201a_assignment0_invitation_link: ""
+201a_assignment1_invitation_link: ""
+201a_assignment2_invitation_link: ""
+201a_assignment3_invitation_link: ""
+201a_assignment4_invitation_link: ""
+201a_assignment5_invitation_link: ""
+
+trello_code: "vxhalzWx"
 trello_name: "ecs-154b-201a-wq24"
 
 dates:
-  midterm: "2/8"
-  final:   "3/21"
+  midterm: "2/7"
+  final:   "3/20"
 
-  dino_1:  "1/20"
-  dino_2:  "1/30"
-  dino_31: "2/6"
-  dino_32: "2/17"
-  dino_4:  "3/3"
-  dino_5:  "3/17"
+  dino_1:  "1/19"
+  dino_2:  "1/29"
+  dino_31: "2/5"
+  dino_32: "2/16"
+  dino_4:  "3/1"
+  dino_5:  "3/15"
 
-  gem5_0:  "1/13"
-  gem5_1:  "1/20"
-  gem5_2:  "1/30"
-  gem5_3:  "2/17"
-  gem5_4:  "3/3"
-  gem5_5:  "3/17"
+  gem5_0:  "1/12"
+  gem5_1:  "1/19"
+  gem5_2:  "1/29"
+  gem5_3:  "2/16"
+  gem5_4:  "3/1"
+  gem5_5:  "3/15"
