Add pointers to the gradescope pages for wq24
Signed-off-by: Jason Lowe-Power <jason@lowepower.com>

--- a/_data/course.yml
+++ b/_data/course.yml
@@ -10,8 +10,8 @@ discussion_site: "Piazza"
 aggie_video_link: "https://video.ucdavis.edu/playlist/details/1_ic2ph2v4"
 one_note_link: "https://ucdavis365-my.sharepoint.com/:o:/g/personal/jlowepower_ucdavis_edu/EtZIYVzF421CvaoUEqJIK5EBVYSpbfNg-WehTi88LEEl5A?e=DyKhWo"
 discussion_link: "https://piazza.com/class/lq5t2onsrnb1ux"
-gradescope_154b: "https://www.gradescope.com/courses/486165"
-gradescope_201a: "https://www.gradescope.com/"
+gradescope_154b: "https://www.gradescope.com/courses/692536"
+gradescope_201a: "https://www.gradescope.com/courses/692537"
 perusall_link: "https://app.perusall.com/courses/ecs-201a-001-wq-2024/"
 
 154b_github_classroom_link: "https://github.com/ECS154B-WQ24"
