--- a/_data/course.yml
+++ b/_data/course.yml
@@ -43,7 +43,7 @@ dino_cpu_link: "https://github.com/jlpteaching/dinocpu"
 201a_assignment3_github_link: "https://github.com/ECS201A-WQ24/assignment4"
 201a_assignment4_github_link: "https://github.com/ECS201A-WQ24/assignment5"
 
-201a_assignment0_invitation_link: ""
+201a_assignment0_invitation_link: "https://classroom.github.com/a/Ru771Yj_"
 201a_assignment1_invitation_link: ""
 201a_assignment2_invitation_link: ""
 201a_assignment3_invitation_link: ""
