--- a/_data/course.yml
+++ b/_data/course.yml
@@ -50,6 +50,12 @@ dino_cpu_link: "https://github.com/jlpteaching/dinocpu"
 201a_assignment4_invitation_link: ""
 201a_assignment5_invitation_link: ""
 
+201a_gradescope_lab1_link: ""
+201a_gradescope_lab2_link: ""
+201a_gradescope_lab3_link: ""
+201a_gradescope_lab4_link: ""
+201a_gradescope_lab5_link: ""
+
 trello_code: "vxhalzWx"
 trello_name: "ecs-154b-201a-wq24"
 
