--- a/_data/course.yml
+++ b/_data/course.yml
@@ -50,7 +50,7 @@ dino_cpu_link: "https://github.com/jlpteaching/dinocpu"
 201a_assignment4_invitation_link: ""
 201a_assignment5_invitation_link: ""
 
-201a_gradescope_lab1_link: ""
+201a_gradescope_lab1_link: "https://www.gradescope.com/courses/692537/assignments/3871746"
 201a_gradescope_lab2_link: ""
 201a_gradescope_lab3_link: ""
 201a_gradescope_lab4_link: ""
