add gradescope link for dinocpu assignment 1

--- a/_data/course.yml
+++ b/_data/course.yml
@@ -26,8 +26,8 @@ dino_cpu_link: "https://github.com/jlpteaching/dinocpu"
 154b_assignment3_invitation_link: ""
 154b_assignment4_invitation_link: ""
 
-154b_gradescope_lab1_code_link: ""
-154b_gradescope_lab1_diagram_link: ""
+154b_gradescope_lab1_code_link: "https://www.gradescope.com/courses/692536/assignments/3886319/"
+154b_gradescope_lab1_diagram_link: "https://www.gradescope.com/courses/692536/assignments/3887974"
 154b_gradescope_lab2_code_link: ""
 154b_gradescope_lab31_code_link: ""
 154b_gradescope_lab32_code_link: ""
