public dinocpu assignment 2 instruction page and updated github classroom link

--- a/_data/course.yml
+++ b/_data/course.yml
@@ -22,7 +22,7 @@ dino_cpu_link: "https://github.com/jlpteaching/dinocpu"
 154b_assignment4_github_link: "https://github.com/ECS154B-WQ24/dinocpu-assignment4"
 
 154b_assignment1_invitation_link: "https://classroom.github.com/a/0mft6boX"
-154b_assignment2_invitation_link: ""
+154b_assignment2_invitation_link: "https://classroom.github.com/a/EOed8Dco"
 154b_assignment3_invitation_link: ""
 154b_assignment4_invitation_link: ""
 
