--- a/_data/course.yml
+++ b/_data/course.yml
@@ -8,7 +8,7 @@ lecture_location: "Storer Hall 1322. M/W/F 2:10pm - 3:00pm"
 discussion_site: "Piazza"
 
 aggie_video_link: "https://video.ucdavis.edu/playlist/details/1_ic2ph2v4"
-one_note_link: "https://ucdavis365-my.sharepoint.com/:o:/g/personal/jlowepower_ucdavis_edu/EtZIYVzF421CvaoUEqJIK5EBVYSpbfNg-WehTi88LEEl5A?e=6KNROH"
+one_note_link: "https://1drv.ms/o/s!AglP7HMXX-9DqVsMJiZoLZcR9H1F?e=yQTRbO"
 discussion_link: "https://piazza.com/class/lq5t2onsrnb1ux"
 gradescope_154b: "https://www.gradescope.com/courses/692536"
 gradescope_201a: "https://www.gradescope.com/courses/692537"
