ecs201a: added assignment 3 wo github link
Signed-off-by: Kaustav Goswami <kggoswami@ucdavis.edu>

--- a/_data/course.yml
+++ b/_data/course.yml
@@ -52,7 +52,7 @@ dino_cpu_link: "https://github.com/jlpteaching/dinocpu"
 
 201a_gradescope_lab1_link: "https://www.gradescope.com/courses/692537/assignments/3871746"
 201a_gradescope_lab2_link: "https://www.gradescope.com/courses/692537/assignments/3963751"
-201a_gradescope_lab3_link: ""
+201a_gradescope_lab3_link: "https://www.gradescope.com/courses/692537/assignments/4016786"
 201a_gradescope_lab4_link: ""
 201a_gradescope_lab5_link: ""
 
