--- a/_data/course.yml
+++ b/_data/course.yml
@@ -46,7 +46,7 @@ dino_cpu_link: "https://github.com/jlpteaching/dinocpu"
 201a_assignment0_invitation_link: "https://classroom.github.com/a/Ru771Yj_"
 201a_assignment1_invitation_link: "https://classroom.github.com/a/quhiOywP"
 201a_assignment2_invitation_link: "https://classroom.github.com/a/_AGS6Du7"
-201a_assignment3_invitation_link: ""
+201a_assignment3_invitation_link: "https://classroom.github.com/a/WmMaBape"
 201a_assignment4_invitation_link: ""
 201a_assignment5_invitation_link: ""
 
