updated dinocpu assignment 4 github classroom invitation link

--- a/_data/course.yml
+++ b/_data/course.yml
@@ -24,7 +24,7 @@ dino_cpu_link: "https://github.com/jlpteaching/dinocpu"
 154b_assignment1_invitation_link: "https://classroom.github.com/a/0mft6boX"
 154b_assignment2_invitation_link: "https://classroom.github.com/a/EOed8Dco"
 154b_assignment3_invitation_link: "https://classroom.github.com/a/YdbU_qu-"
-154b_assignment4_invitation_link: ""
+154b_assignment4_invitation_link: "https://classroom.github.com/a/j83-CMv1"
 
 154b_gradescope_lab1_code_link: "https://www.gradescope.com/courses/692536/assignments/3886319/"
 154b_gradescope_lab1_diagram_link: "https://www.gradescope.com/courses/692536/assignments/3887974"
