--- a/_data/course.yml
+++ b/_data/course.yml
@@ -34,7 +34,7 @@ dino_cpu_link: "https://github.com/jlpteaching/dinocpu"
 154b_gradescope_lab4_code_link: ""
 154b_gradescope_lab4_written_link: ""
 154b_gradescope_lab5_code_link: ""
-154b_gradescope_lab5_written_link: ""
+154b_gradescope_lab5_written_link: "https://www.gradescope.com/courses/692536/assignments/4170687"
 
 201a_github_classroom_link: "https://github.com/ECS201A-WQ24"
 201a_assignment0_github_link: "https://github.com/ECS201A-WQ24/assignment0"
