--- a/_data/course.yml
+++ b/_data/course.yml
@@ -31,9 +31,9 @@ dino_cpu_link: "https://github.com/jlpteaching/dinocpu"
 154b_gradescope_lab2_code_link: "https://www.gradescope.com/courses/692536/assignments/3983366/"
 154b_gradescope_lab31_code_link: "https://www.gradescope.com/courses/692536/assignments/4053971"
 154b_gradescope_lab32_code_link: "https://www.gradescope.com/courses/692536/assignments/4053962"
-154b_gradescope_lab4_code_link: ""
-154b_gradescope_lab4_written_link: ""
-154b_gradescope_lab5_code_link: ""
+154b_gradescope_lab4_code_link: "https://www.gradescope.com/courses/692536/assignments/4161966"
+154b_gradescope_lab4_written_link: "https://www.gradescope.com/courses/692536/assignments/4167294"
+154b_gradescope_lab5_code_link: "https://www.gradescope.com/courses/692536/assignments/4170687"
 154b_gradescope_lab5_written_link: "https://www.gradescope.com/courses/692536/assignments/4170687"
 
 201a_github_classroom_link: "https://github.com/ECS201A-WQ24"
