--- a/_data/course.yml
+++ b/_data/course.yml
@@ -1,78 +1,73 @@
 title: "ECS 154B/201A: Computer Architecture"
-description: "UC Davis Computer Architecture course offered by Jason Lowe-Power Winter Quarter 2023"
-modules: ["Introduction", "Processor Architecture", "Memory Architecture", "Parallel Architecture", "DINO CPU", "gem5"]
+description: "UC Davis Computer Architecture course offered by Jason Lowe-Power Winter Quarter 2025"
+modules: ["Introduction", "Processor Architecture", "Memory Architecture", "Parallel Architecture", "gem5"]
 
-quarter: "Winter 2024"
-quarter_abbr: "wq24"
-lecture_location: "Storer Hall 1322. M/W/F 2:10pm - 3:00pm"
+quarter: "Winter 2025"
+quarter_abbr: "wq25"
+lecture_location: "Teaching and Learning Complex 1010. M/W/F 1:10pm - 2:00pm"
+discussion_154b_location: "Hart Hall 1150. Mondays 10:00am - 10:50am"
+discussion_201a_location: "Wellman Hall 226. Fridays 9:00am - 9:50am"
 discussion_site: "Piazza"
 
-aggie_video_link: "https://video.ucdavis.edu/playlist/details/1_r742jxna"
-one_note_link: "https://1drv.ms/o/s!AglP7HMXX-9DqVsMJiZoLZcR9H1F?e=yQTRbO"
-discussion_link: "https://piazza.com/class/lq5t2onsrnb1ux"
-gradescope_154b: "https://www.gradescope.com/courses/692536"
-gradescope_201a: "https://www.gradescope.com/courses/692537"
-perusall_link: "https://app.perusall.com/courses/ecs-201a-001-wq-2024/"
+aggie_video_link: "https://video.ucdavis.edu/playlist/details/1_2b6gvhrq"
+one_note_link: "https://1drv.ms/o/c/43ef5f1773ec4f09/EhfSFjmdCMlHiv4c_eP5LccBC9xGHPXuBFBE4fYu9u5xWg?e=Ml3"
+discussion_link: "https://piazza.com/class/m5bke593mbm59o"
+gradescope_154b: "https://www.gradescope.com/courses/938230"
+gradescope_201a: "https://www.gradescope.com/courses/938231"
+perusall_link: "https://app.perusall.com/courses/ecs-201a-001-wq-2025"
 
-154b_github_classroom_link: "https://github.com/ECS154B-WQ24"
-dino_cpu_link: "https://github.com/jlpteaching/dinocpu"
-154b_assignment1_github_link: "https://github.com/ECS154B-WQ24/dinocpu-assignment1"
-154b_assignment2_github_link: "https://github.com/ECS154B-WQ24/dinocpu-assignment2"
-154b_assignment3_github_link: "https://github.com/ECS154B-WQ24/dinocpu-assignment3"
-154b_assignment4_github_link: "https://github.com/ECS154B-WQ24/dinocpu-assignment4"
+154b_github_classroom_link: "https://github.com/ECS154B-WQ25"
+154b_assignment0_github_link: "https://github.com/ECS154B-WQ25/assignment0"
+154b_assignment1_github_link: "https://github.com/ECS154B-WQ25/assignment1"
+154b_assignment2_github_link: "https://github.com/ECS154B-WQ25/assignment2"
+154b_assignment3_github_link: "https://github.com/ECS154B-WQ25/assignment3"
+154b_assignment4_github_link: "https://github.com/ECS154B-WQ25/assignment4"
+154b_assignment5_github_link: "https://github.com/ECS154B-WQ25/assignment5"
+154b_assignment6_github_link: "https://github.com/ECS154B-WQ25/assignment6"
 
-154b_assignment1_invitation_link: "https://classroom.github.com/a/0mft6boX"
-154b_assignment2_invitation_link: "https://classroom.github.com/a/EOed8Dco"
-154b_assignment3_invitation_link: "https://classroom.github.com/a/YdbU_qu-"
-154b_assignment4_invitation_link: "https://classroom.github.com/a/j83-CMv1"
+154b_assignment0_invitation_link: ""
+154b_assignment1_invitation_link: ""
+154b_assignment2_invitation_link: ""
+154b_assignment3_invitation_link: ""
+154b_assignment4_invitation_link: ""
+154b_assignment5_invitation_link: ""
+154b_assignment6_invitation_link: ""
 
-154b_gradescope_lab1_code_link: "https://www.gradescope.com/courses/692536/assignments/3886319/"
-154b_gradescope_lab1_diagram_link: "https://www.gradescope.com/courses/692536/assignments/3887974"
-154b_gradescope_lab2_code_link: "https://www.gradescope.com/courses/692536/assignments/3983366/"
-154b_gradescope_lab31_code_link: "https://www.gradescope.com/courses/692536/assignments/4053971"
-154b_gradescope_lab32_code_link: "https://www.gradescope.com/courses/692536/assignments/4053962"
-154b_gradescope_lab4_code_link: "https://www.gradescope.com/courses/692536/assignments/4161966"
-154b_gradescope_lab4_written_link: "https://www.gradescope.com/courses/692536/assignments/4167294"
-154b_gradescope_lab5_code_link: "https://www.gradescope.com/courses/692536/assignments/4170687"
-154b_gradescope_lab5_written_link: "https://www.gradescope.com/courses/692536/assignments/4170687"
+# 154b_gradescope_lab1_code_link: "https://www.gradescope.com/courses/692536/assignments/3886319/"
+# 154b_gradescope_lab1_diagram_link: "https://www.gradescope.com/courses/692536/assignments/3887974"
+# 154b_gradescope_lab2_code_link: "https://www.gradescope.com/courses/692536/assignments/3983366/"
+# 154b_gradescope_lab31_code_link: "https://www.gradescope.com/courses/692536/assignments/4053971"
+# 154b_gradescope_lab32_code_link: "https://www.gradescope.com/courses/692536/assignments/4053962"
+# 154b_gradescope_lab4_code_link: "https://www.gradescope.com/courses/692536/assignments/4161966"
+# 154b_gradescope_lab4_written_link: "https://www.gradescope.com/courses/692536/assignments/4167294"
+# 154b_gradescope_lab5_code_link: "https://www.gradescope.com/courses/692536/assignments/4170687"
+# 154b_gradescope_lab5_written_link: "https://www.gradescope.com/courses/692536/assignments/4170687"
 
-201a_github_classroom_link: "https://github.com/ECS201A-WQ24"
-201a_assignment0_github_link: "https://github.com/ECS201A-WQ24/assignment0"
-201a_assignment1_github_link: "https://github.com/ECS201A-WQ24/assignment1"
-201a_assignment2_github_link: "https://github.com/ECS201A-WQ24/assignment2"
-201a_assignment3_github_link: "https://github.com/ECS201A-WQ24/assignment3"
-201a_assignment4_github_link: "https://github.com/ECS201A-WQ24/assignment4"
+201a_github_classroom_link: "https://github.com/ECS201A-WQ25"
+201a_assignment0_github_link: "https://github.com/ECS201A-WQ25/assignment0"
+201a_assignment1_github_link: "https://github.com/ECS201A-WQ25/assignment1"
+201a_assignment2_github_link: "https://github.com/ECS201A-WQ25/assignment2"
+201a_assignment3_github_link: "https://github.com/ECS201A-WQ25/assignment3"
+201a_assignment4_github_link: "https://github.com/ECS201A-WQ25/assignment4"
+201a_assignment4_github_link: "https://github.com/ECS201A-WQ25/assignment5"
+201a_assignment4_github_link: "https://github.com/ECS201A-WQ25/assignment6"
 
-201a_assignment0_invitation_link: "https://classroom.github.com/a/Ru771Yj_"
-201a_assignment1_invitation_link: "https://classroom.github.com/a/quhiOywP"
-201a_assignment2_invitation_link: "https://classroom.github.com/a/_AGS6Du7"
-201a_assignment3_invitation_link: "https://classroom.github.com/a/WmMaBape"
+201a_assignment0_invitation_link: ""
+201a_assignment1_invitation_link: ""
+201a_assignment2_invitation_link: ""
+201a_assignment3_invitation_link: ""
 201a_assignment4_invitation_link: ""
 201a_assignment5_invitation_link: ""
-
-201a_gradescope_lab1_link: "https://www.gradescope.com/courses/692537/assignments/3871746"
-201a_gradescope_lab2_link: "https://www.gradescope.com/courses/692537/assignments/3963751"
-201a_gradescope_lab3_link: "https://www.gradescope.com/courses/692537/assignments/4016786"
-201a_gradescope_lab4_link: ""
-201a_gradescope_lab5_link: ""
-
-trello_code: "vxhalzWx"
-trello_name: "ecs-154b-201a-wq24"
+201a_assignment6_invitation_link: ""
 
 dates:
   midterm: "2/7"
   final:   "3/20"
 
-  dino_1:  "1/19"
-  dino_2:  "1/29"
-  dino_31: "2/5"
-  dino_32: "2/16"
-  dino_4:  "3/1"
-  dino_5:  "3/15"
-
-  gem5_0:  "1/12"
-  gem5_1:  "1/19"
-  gem5_2:  "1/29"
-  gem5_3:  "2/16"
-  gem5_4:  "3/1"
-  gem5_5:  "3/15"
+  gem5_0:  "1/15"
+  gem5_1:  "1/20"
+  gem5_2:  "1/27"
+  gem5_3:  "2/3"
+  gem5_4:  "2/17"
+  gem5_5:  "2/24"
+  gem5_6:  "3/10"
