Add links to assignment 0 classroom assignment

--- a/_data/course.yml
+++ b/_data/course.yml
@@ -17,15 +17,8 @@ gradescope_201a: "https://www.gradescope.com/courses/938231"
 perusall_link: "https://app.perusall.com/courses/ecs-201a-001-wq-2025"
 
 154b_github_classroom_link: "https://github.com/ECS154B-WQ25"
-154b_assignment0_github_link: "https://github.com/ECS154B-WQ25/assignment0"
-154b_assignment1_github_link: "https://github.com/ECS154B-WQ25/assignment1"
-154b_assignment2_github_link: "https://github.com/ECS154B-WQ25/assignment2"
-154b_assignment3_github_link: "https://github.com/ECS154B-WQ25/assignment3"
-154b_assignment4_github_link: "https://github.com/ECS154B-WQ25/assignment4"
-154b_assignment5_github_link: "https://github.com/ECS154B-WQ25/assignment5"
-154b_assignment6_github_link: "https://github.com/ECS154B-WQ25/assignment6"
 
-154b_assignment0_invitation_link: ""
+154b_assignment0_invitation_link: "https://classroom.github.com/a/MSJXTW62"
 154b_assignment1_invitation_link: ""
 154b_assignment2_invitation_link: ""
 154b_assignment3_invitation_link: ""
@@ -44,15 +37,8 @@ perusall_link: "https://app.perusall.com/courses/ecs-201a-001-wq-2025"
 # 154b_gradescope_lab5_written_link: "https://www.gradescope.com/courses/692536/assignments/4170687"
 
 201a_github_classroom_link: "https://github.com/ECS201A-WQ25"
-201a_assignment0_github_link: "https://github.com/ECS201A-WQ25/assignment0"
-201a_assignment1_github_link: "https://github.com/ECS201A-WQ25/assignment1"
-201a_assignment2_github_link: "https://github.com/ECS201A-WQ25/assignment2"
-201a_assignment3_github_link: "https://github.com/ECS201A-WQ25/assignment3"
-201a_assignment4_github_link: "https://github.com/ECS201A-WQ25/assignment4"
-201a_assignment4_github_link: "https://github.com/ECS201A-WQ25/assignment5"
-201a_assignment4_github_link: "https://github.com/ECS201A-WQ25/assignment6"
 
-201a_assignment0_invitation_link: ""
+201a_assignment0_invitation_link: "https://classroom.github.com/a/6tW_hScw"
 201a_assignment1_invitation_link: ""
 201a_assignment2_invitation_link: ""
 201a_assignment3_invitation_link: ""
