--- a/_data/course.yml
+++ b/_data/course.yml
@@ -19,7 +19,7 @@ perusall_link: "https://app.perusall.com/courses/ecs-201a-001-wq-2025"
 154b_github_classroom_link: "https://github.com/ECS154B-WQ25"
 
 154b_assignment0_invitation_link: "https://classroom.github.com/a/MSJXTW62"
-154b_assignment1_invitation_link: ""
+154b_assignment1_invitation_link: "https://classroom.github.com/a/U2i19Erv"
 154b_assignment2_invitation_link: ""
 154b_assignment3_invitation_link: ""
 154b_assignment4_invitation_link: ""
@@ -39,7 +39,7 @@ perusall_link: "https://app.perusall.com/courses/ecs-201a-001-wq-2025"
 201a_github_classroom_link: "https://github.com/ECS201A-WQ25"
 
 201a_assignment0_invitation_link: "https://classroom.github.com/a/6tW_hScw"
-201a_assignment1_invitation_link: ""
+201a_assignment1_invitation_link: "https://classroom.github.com/a/5c60g6T7"
 201a_assignment2_invitation_link: ""
 201a_assignment3_invitation_link: ""
 201a_assignment4_invitation_link: ""
