Add assignment 4 and update due dates for assignments 5 and 6
Signed-off-by: Jason Lowe-Power <jason@lowepower.com>

--- a/_data/course.yml
+++ b/_data/course.yml
@@ -22,7 +22,7 @@ perusall_link: "https://app.perusall.com/courses/ecs-201a-001-wq-2025"
 154b_assignment1_invitation_link: "https://classroom.github.com/a/U2i19Erv"
 154b_assignment2_invitation_link: "https://classroom.github.com/a/9ttRhgEf"
 154b_assignment3_invitation_link: "https://classroom.github.com/a/TOfrsoGz"
-154b_assignment4_invitation_link: ""
+154b_assignment4_invitation_link: "https://classroom.github.com/a/ZD8qXu0S"
 154b_assignment5_invitation_link: ""
 154b_assignment6_invitation_link: ""
 
@@ -42,7 +42,7 @@ perusall_link: "https://app.perusall.com/courses/ecs-201a-001-wq-2025"
 201a_assignment1_invitation_link: "https://classroom.github.com/a/5c60g6T7"
 201a_assignment2_invitation_link: "https://classroom.github.com/a/wvKeeK6I"
 201a_assignment3_invitation_link: "https://classroom.github.com/a/f4SMUSm8"
-201a_assignment4_invitation_link: ""
+201a_assignment4_invitation_link: "https://classroom.github.com/a/JTDRGnbs"
 201a_assignment5_invitation_link: ""
 201a_assignment6_invitation_link: ""
 
@@ -55,5 +55,5 @@ dates:
   gem5_2:  "1/27"
   gem5_3:  "2/3"
   gem5_4:  "2/17"
-  gem5_5:  "2/24"
-  gem5_6:  "3/10"
+  gem5_5:  "3/3"
+  gem5_6:  "3/14"
