--- a/_data/course.yml
+++ b/_data/course.yml
@@ -23,7 +23,7 @@ perusall_link: "https://app.perusall.com/courses/ecs-201a-001-wq-2025"
 154b_assignment2_invitation_link: "https://classroom.github.com/a/9ttRhgEf"
 154b_assignment3_invitation_link: "https://classroom.github.com/a/TOfrsoGz"
 154b_assignment4_invitation_link: "https://classroom.github.com/a/ZD8qXu0S"
-154b_assignment5_invitation_link: ""
+154b_assignment5_invitation_link: "https://classroom.github.com/a/bDGsMxaa"
 154b_assignment6_invitation_link: ""
 
 # 154b_gradescope_lab1_code_link: "https://www.gradescope.com/courses/692536/assignments/3886319/"
@@ -43,7 +43,7 @@ perusall_link: "https://app.perusall.com/courses/ecs-201a-001-wq-2025"
 201a_assignment2_invitation_link: "https://classroom.github.com/a/wvKeeK6I"
 201a_assignment3_invitation_link: "https://classroom.github.com/a/f4SMUSm8"
 201a_assignment4_invitation_link: "https://classroom.github.com/a/JTDRGnbs"
-201a_assignment5_invitation_link: ""
+201a_assignment5_invitation_link: "https://classroom.github.com/a/HZ0NCDOx"
 201a_assignment6_invitation_link: ""
 
 dates:
